fixing sidebar division break on map page

--- a/app/static/app/css/sb-admin-2.scss
+++ b/app/static/app/css/sb-admin-2.scss
@@ -184,7 +184,7 @@ body {
     }
 }
 
-.horizontal-bar {
+.horizontal-bar-sidebar {
     display: block;
     height: 1px !important;
     background-color: #96c6c6;
